refactor the implementation of inmemory repo so that changes won't be lost after an action (update / create)
