# controllers/struct.go
@@ -9,6 +9,16 @@ import (
 	"github.com/astaxie/beego"
 )
 
+var repo groot.StructRepository
+
+func init() {
+	r := beego.AppConfig.DefaultString("RepositoryMode", "inmemory")
+	if r == "inmemory" {
+		repo = inmemory.NewStructRepository()
+	}
+	//TODO next: postgres impl here
+}
+
 // Operations about struct
 type StructController struct {
 	beego.Controller
@@ -27,8 +37,6 @@ func (s *StructController) Create() {
 		s.CustomAbort(400, "bad request")
 	}
 
-	//TODO must be able to switch inmemory / postgres impl (possibly using conf)
-	repo := inmemory.NewStructRepository()
 	svc := service.NewStructService(repo)
 	resp := svc.CreateStruct(req)
 
@@ -41,8 +49,8 @@ func (s *StructController) Create() {
 	s.ServeJSON()
 }
 
-// @Description Find 1 struct
-// @Param	structId	path 	string		true	"the struct id you want to get"
+// @Description Find one struct by id
+// @Param	structId	path 	string		true	"the struct id you want to find"
 // @Success 200 {result} the Struct
 // @Failure 400 bad request
 // @Failure 404 struct not found
@@ -54,7 +62,6 @@ func (s *StructController) Struct() {
 		s.CustomAbort(400, "bad request")
 	}
 
-	repo := inmemory.NewStructRepository()
 	svc := service.NewStructService(repo)
 	resp := svc.Struct(structId)
 
@@ -73,10 +80,40 @@ func (s *StructController) Struct() {
 // @Failure 500 internal server error
 // @router / [get]
 func (s *StructController) Structs() {
-	//TODO need to figure out way to diff impl such as postgres / in-memory repo
-	repo := inmemory.NewStructRepository()
 	svc := service.NewStructService(repo)
 	resp := svc.Structs()
+
+	if resp.Status != 200 {
+		body := resp.Result.(string)
+		s.CustomAbort(resp.Status, body)
+	}
+
+	s.Data["json"] = resp.Result
+	s.ServeJSON()
+}
+
+// @Description Update a Struct
+// @Param	structId	path 	string					true	"the struct id you want to update"
+// @Param	body		body 	groot.StructRequest		true	"The struct content, e.q {"value": 1}"
+// @Success 200 {result} the Struct
+// @Failure 400 bad request
+// @Failure 404 struct not found
+// @Failure 500 internal server error
+// @router /:structId [put]
+func (s *StructController) Update() {
+	structId := s.Ctx.Input.Param(":structId")
+	if structId == "" {
+		s.CustomAbort(400, "bad request")
+	}
+
+	var req groot.StructRequest
+	err := json.ConvertRequest(s.Ctx.Input.RequestBody, &req)
+	if err != nil {
+		s.CustomAbort(400, "bad request")
+	}
+
+	svc := service.NewStructService(repo)
+	resp := svc.UpdateStruct(structId, req)
 
 	if resp.Status != 200 {
 		body := resp.Result.(string)
