# routers/commentsRouter___________________Users_shenlihartono_Documents_go-workspace_src_beego-standard-layout_controllers.go
@@ -43,4 +43,13 @@ func init() {
             Filters: nil,
             Params: nil})
 
+    beego.GlobalControllerRouter["beego-standard-layout/controllers:StructController"] = append(beego.GlobalControllerRouter["beego-standard-layout/controllers:StructController"],
+        beego.ControllerComments{
+            Method: "Update",
+            Router: `/:structId`,
+            AllowHTTPMethods: []string{"put"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
 }
